fix(PullRefresh): fix overflow for ios13 safari
ios13系统中，pull-refresh + list配合使用时，
即使列表在已经分页加载完成的情况下，
正常上下滑动页面，会出现页面绘制不完全的问题

--- a/packages/vant/src/pull-refresh/index.less
+++ b/packages/vant/src/pull-refresh/index.less
@@ -8,7 +8,6 @@
 }
 
 .van-pull-refresh {
-  overflow: hidden;
   user-select: none;
 
   &__track {
